[package]
name = "stagehand-sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
stagehand = { path = "../stagehand", features = ["2d"] }

[dev-dependencies]
stagehand = { path = "../stagehand", features = ["2d", "example"]}

[dependencies.sdl2]
version = "0.36"
optional = true
default-features = false
features = ["ttf", "image", "mixer"]

[[example]]
name = "cross-platform"